--- a/src/components/contact/contact.sass
+++ b/src/components/contact/contact.sass
@@ -21,7 +21,8 @@
 
       div
         img
-          width: 95px
+          width: 60px
+          border-radius: 15%
 
     .input-wrapper
       display: block
@@ -90,7 +91,7 @@
       .form-heading
         div
           img
-            width: 60px
+            width: 40px
 
     .input-support
       width: 80%
